# CTHarvester

./: .coveragerc  .editorconfig  .flake8  .gitignore  .mutmut-config.py  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  CTHarvester.py  CTHarvester.spec  CTHarvester_en.qm  CTHarvester_en.ts  CTHarvester_ko.qm  CTHarvester_ko.ts  CTHarvester_mt.py  CTHarvester_onedir.spec  CTHarvester_onefile.spec  CTLogger.py  CTScape.spec  CTScope.py  Cargo.toml  Estaingia_rough_1.tps  Estaingia_rough_2.tps  GITHUB_PAGES_SETUP.md  LICENSE  Makefile  NEXT_IMPROVEMENTS.md  PCA_test.py  PCA_test2.py  Phacops_flat_20230619.tps  README.ko.md  README.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  RELEASE_NOTES_v0.2.3-beta.1.md  SETTINGS_DIALOG_INFO.md  SETTINGS_MIGRATION.md  Tf-20230619.x1y1  VERSION_MANAGEMENT.md  (+25 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build.yml  codeql.yml  dependency-review.yml  docs.yml  generate-release-notes.yml  generate-release-notes.yml.disabled  manual-release.yml  performance-tracking.yml  quality-gates.yml  release.yml  reusable_build.yml  test-full.yml  test.yml  update-readme-badges.yml
InnoSetup/: CTHarvester.iss  CTHarvester.iss.template
config/: __init__.py  constants.py  i18n.py  settings.yaml  shortcuts.py  tooltips.py  ui_style.py  view_modes.py
core/: file_handler.py  progress_manager.py  progress_tracker.py  protocols.py  sequential_processor.py  thumbnail_generator.py  thumbnail_manager.py  thumbnail_progress_tracker.py  thumbnail_worker.py  thumbnail_worker_manager.py  volume_processor.py
devlog/: 20250806_001_empty_directory_cursor_fix.md  20250806_002_github_actions_and_version_management.md  20250911_003_single_progress_bar_for_thumbnail_generation.md  20250911_004_review_single_progress_bar_implementation.md  20250912_005_thumbnail_progress_and_bounding_box_fixes.md  20250912_006_vertical_timeline_slider_migration_plan.md  20250920_007_thumbnail_generation_time_estimation.md  20250925_008_rust_module_integration_and_ui_enhancement.md  20250925_009_rust_parallelization_optimization_attempts.md  20250929_010_python_thumbnail_performance_investigation.md  20250929_011_python_performance_optimization_and_simplification.md  20250929_012_thumbnail_generation_fixes_and_progress_improvements.md  20250930_013_critical_issues_fix_plan.md  20250930_014_important_improvements_plan.md  20250930_015_recommended_improvements_plan.md  20250930_016_critical_issues_fixed.md  20250930_017_multithreading_bottleneck_analysis.md  20250930_018_thread_count_rollback.md  20250930_019_threading_strategy_clarification.md  20250930_020_rust_vs_python_io_strategy.md  20250930_021_important_improvements_implemented.md  20250930_022_daily_work_summary.md  20250930_023_refactor_phase1_phase2.md  20250930_024_refactor_complete.md  20250930_025_refactor_phase4_ui_complete.md  20250930_026_test_coverage_initial.md  20250930_027_test_coverage_results.md  20250930_028_test_coverage_final.md  20250930_029_PROJECT_RETROSPECTIVE.md  20250930_030_recommended_improvements_completed.md  20250930_031_daily_work_summary.md  20250930_032_comprehensive_daily_summary.md  20250930_033_the_captive_developer.md  20250930_034_the_captive_developer_v2.md  20250930_035_codebase_analysis_and_improvement_plan.md  20250930_036_phase1_refactoring_completion_report.md  20250930_037_phase2_improvements_completion_report.md  20250930_038_phase5_code_quality_tools_setup.md  20251001_039_ui_testing_plan.md  20251001_040_interactive_ui_testing_guide.md  (+68 more)
docs/: ARCHITECTURE.md  CI_CD_AUDIT.md  CODE_QUALITY.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  advanced_features.rst  changelog.rst  conf.py  configuration.md  developer_guide.rst  faq.rst  index.rst  installation.rst  requirements.txt  troubleshooting.rst  user_guide.rst
docs/_templates/: layout.html
docs/api/: config.rst  core.rst  index.rst  security.rst  ui.rst  utils.rst
docs/developer_guide/: error_recovery.md  performance.md
packaging/linux/: create_appimage.sh
performance_data/: .gitignore  baseline.json  baseline_metrics.json
resources/translations/: CTHarvester_ko.qm  CTHarvester_ko.ts
scripts/: collect_metrics.py  convert_icon.py  convert_tps.py  generate_release_notes.py  setup_next_improvements.sh  test_actual_bottleneck.py  test_bmp_optimization.py  test_integration.py  test_naming_consistency.py  test_pil_16bit.py  test_pil_performance.py  test_thumbnail_output.py
scripts/profiling/: README.md  collect_performance_metrics.py  compare_performance.py  profile_performance.py  visualize_performance.py
security/: __init__.py  file_validator.py
src/: lib.rs  lib_final.rs  lib_optimized.rs
tests/: __init__.py  conftest.py  test_basic.py  test_common.py  test_constants.py  test_directory_open_handler.py  test_e2e_workflows.py  test_edge_cases.py  test_error_messages.py  test_error_recovery.py  test_errors.py  test_export_handler.py  test_file_handler.py  test_file_handler_error_paths.py  test_file_utils.py  test_handler_workflows.py  test_i18n.py  test_image_utils.py  test_image_utils_error_paths.py  test_integration_thumbnail.py  test_main_window_integration.py  test_performance.py  test_performance_logger.py  test_progress_manager.py  test_progress_tracker.py  test_roi_manager.py  test_rust_python_fallback.py  test_security.py  test_sequential_processor.py  test_settings_handler.py  test_shortcuts.py  test_thumbnail_creation_handler.py  test_thumbnail_generator.py  test_thumbnail_manager.py  test_thumbnail_progress_tracker.py  test_thumbnail_worker.py  test_thumbnail_worker_manager.py  test_time_estimator.py  test_tooltips.py  test_ui_style.py  (+3 more)
tests/benchmarks/: __init__.py  benchmark_config.py  test_performance.py  test_stress.py
tests/integration/: __init__.py  conftest.py  test_export_workflows.py  (+3 more)
ui/: ctharvester_app.py  errors.py  main_window.py
utils/: __init__.py  common.py  error_messages.py  file_utils.py  image_utils.py  log_helper.py  performance_logger.py  settings_manager.py  settings_migration.py  time_estimator.py  ui_utils.py  worker.py
(+39 files in other folders)
