[package]
name = "ct_thumbnail"
version = "0.2.3"
edition = "2021"
rust-version = "1.75"
authors = ["Jikhan Jung"]
description = "High-performance thumbnail generation for CTHarvester"
license = "MIT"

[lib]
name = "ct_thumbnail"
crate-type = ["cdylib"]
path = "src/lib_optimized.rs"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
rayon = "1.10"
image = { version = "0.25", features = ["bmp", "tiff", "png", "jpeg"] }
walkdir = "2.5"
natord = "1.0"
thiserror = "1.0"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
